macerror.txt

[4] Node: v26.5.0

[5] Building...
  Qt6_DIR: /usr/local/opt/qt/lib/cmake/Qt6
  Rust scanner...
   Compiling diskraptor v0.6.1 (/Users/hjh/Documents/GitHub/DiskRaptor/src-tauri)
error[E0133]: call to unsafe function `platform::fts_close` is unsafe and requires unsafe function or block
    --> src/scanner/walker.rs:1228:9
     |
1228 |         fts_close(ftsp);
     |         ^^^^^^^^^^^^^^^ call to unsafe function
     |
     = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0382]: borrow of moved value: `full`
    --> src/scanner/walker.rs:1222:55
     |
1126 |                 let full = CStr::from_ptr(path_ptr).to_string_lossy().to_string();
     |                     ----   ------------------------------------------------------ this reinitialization might get skipped
     |                     |
     |                     move occurs because `full` has type `std::string::String`, which does not implement the `Copy` trait
...
1180 |                     ptix.insert(full, ci);
     |                                 ---- value moved here
...
1222 |                     progress(files_found, dirs_found, &full);
     |                                                       ^^^^^ value borrowed here after move
     |
     = note: borrow occurs due to deref coercion to `str`
help: consider cloning the value if the performance cost is acceptable
     |
1180 |                     ptix.insert(full.clone(), ci);
     |                                     ++++++++

Some errors have detailed explanations: E0133, E0382.
For more information about an error, try `rustc --explain E0133`.
error: could not compile `diskraptor` (lib) due to 2 previous errors
hjh@Hansjoergs-Mac DiskRaptor % 